test/types/records/sungeun/emptyRecords/emptyRecordInvalidEQUALS.good
emptyRecordInvalidEQUALS.chpl:5: error: unresolved call '==(blah_t, 1)'
