test/types/records/sungeun/emptyRecords/emptyRecordInvalidEQUALS.chpl
record blah_t {
};

const blah: blah_t;
if blah == 1 then writeln("wrong");

